# agni

./: .gitignore  README.md  README_ja.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/db/: db.py
app/domain/: log.py  serp.py  task.py  user.py
app/domain/models/: answers.py  completion_codes.py  conditions.py  logs.py  search_pages.py  tasks.py  users.py
app/domain/repository/: log.py  serp.py  task.py  user.py
app/infra/: alchemy.py  mysql.py
app/models/: log.py  task.py  user.py
app/repository/: log.py  serp.py  task.py  user.py
app/repository/orm/: user.py
app/routers/: auth.py  log.py  serp.py  task.py  user.py
app/usecase/: log.py  serp.py  task.py  user.py
app/usecase/orm/: user.py
backend/: pyproject.toml
database/: Dockerfile  docker-compose.yml
database/migrations/: 20210503144054_create_table_behavior_logs.sql  20210503144201_create_table_task_condition_relations.sql  20210503144247_create_table_answers.sql
database/mysql/initdb.d/: 20210503142935_create_table_user.sql  20210503144134_create_table_conditions.sql  20210503144143_create_table_tasks.sql  20210503144201_create_table_task_condition_relations.sql  20210503144237_create_table_search_pages.sql  20210503144247_create_table_answers.sql  20210503152123_create_table_completion_code.sql  20210503152203_create_table_click_logs.sql  20210503152247_create_table_dwell_time_logs.sql  (+6 more)
database/seeder/: 20211125003717---search_pages.sql  20211125003842---tasks.sql  20211125003853---conditions.sql
